--- a/examples/dotnet/provider-kafkaconnect-native.csproj
+++ b/examples/dotnet/provider-kafkaconnect-native.csproj
@@ -5,10 +5,9 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
-
 	<ItemGroup>
 		<PackageReference Include="Pulumi" Version="3.*" />
-		<PackageReference Include="Pulumi.Xyz" Version="0.0.1-alpha.1699945013+97b0e04c" />
+		<PackageReference Include="Pulumi.Kafkaconnect" Version="0.0.1-alpha.1736891569+49650d57.dirty" />
 	</ItemGroup>
 
 </Project>
