added connector pkg

--- a/sdk/nodejs/package.json
+++ b/sdk/nodejs/package.json
@@ -1,6 +1,12 @@
 {
     "name": "@pulumi/kafkaconnect",
     "version": "${VERSION}",
+    "keywords": [
+        "kafka",
+        "kafkaconnect",
+        "connect",
+        "catergory/data"
+    ],
     "scripts": {
         "build": "tsc"
     },
