--- a/sdk/dotnet/Pulumi.Kafkaconnect.csproj
+++ b/sdk/dotnet/Pulumi.Kafkaconnect.csproj
@@ -4,7 +4,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Pulumi Corp.</Authors>
     <Company>Pulumi Corp.</Company>
-    <Description></Description>
+    <Description>A Pulumi native provider for Kafka Connect</Description>
     <PackageLicenseExpression></PackageLicenseExpression>
     <PackageProjectUrl></PackageProjectUrl>
     <RepositoryUrl></RepositoryUrl>
