added schema, release.yml

--- a/deployment-templates/.goreleaser.yml
+++ b/deployment-templates/.goreleaser.yml
@@ -1,6 +1,6 @@
 archives:
   - id: archive
-    name_template: '{{ .Binary }}-{{ .Tag }}-{{ .Os }}-{{ .Arch }}'
+    name_template: "{{ .Binary }}-{{ .Tag }}-{{ .Os }}-{{ .Arch }}"
 before:
   hooks:
     - make gen
@@ -18,7 +18,7 @@ builds:
       - linux
     ldflags:
       # The line below MUST align with the module in current provider/go.mod
-      - -X github.com/your-org-name/pulumi-kafkaconnect/provider/Version={{.Tag }}
+      - -X github.com/azaurus1/pulumi-kafka-connect/provider/Version={{.Tag }}
     main: ./cmd/pulumi-resource-kafkaconnect/
 changelog:
   skip: true
@@ -26,4 +26,4 @@ release:
   disable: false
   prerelease: auto
 snapshot:
-  name_template: '{{ .Tag }}-SNAPSHOT'
+  name_template: "{{ .Tag }}-SNAPSHOT"
