--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,11 +1,12 @@
 archives:
   - id: archive
     name_template: "{{ .Binary }}-{{ .Tag }}-{{ .Os }}-{{ .Arch }}"
+
 before:
   hooks:
-    - make gen
+    - make provider
 builds:
-  - binary: pulumi-resource-kafkaconnect
+  - binary: pulumi-resource-pinecone
     dir: provider
     env:
       - CGO_ENABLED=0
@@ -20,10 +21,53 @@ builds:
       # The line below MUST align with the module in current provider/go.mod
       - -X github.com/azaurus1/pulumi-kafka-connect/provider/Version={{.Tag }}
     main: ./cmd/pulumi-resource-kafkaconnect/
-changelog:
-  skip: true
+
+signs:
+  - cmd: cosign
+    env:
+      - COSIGN_EXPERIMENTAL=1
+    certificate: "${artifact}.pem"
+    args:
+      - sign-blob
+      - "-y"
+      - "--output-certificate=${certificate}"
+      - "--bundle=${signature}"
+      - "${artifact}"
+    artifacts: all
+    output: true
+
+sboms:
+  - artifacts: archive
+  - id: source
+    artifacts: source
+
+source:
+  enabled: true
+
 release:
   disable: false
   prerelease: auto
+
 snapshot:
   name_template: "{{ .Tag }}-SNAPSHOT"
+
+changelog:
+  sort: asc
+  use: github
+  filters:
+    exclude:
+      - "^test:"
+      - "^chore"
+      - Merge pull request
+      - Merge remote-tracking branch
+      - Merge branch
+      - go mod tidy
+  groups:
+    - title: "New Features"
+      regexp: "^.*feat[(\\w)]*:+.*$"
+      order: 0
+    - title: "Bug fixes"
+      regexp: "^.*fix[(\\w)]*:+.*$"
+      order: 10
+    - title: Other work
+      order: 999
