added basic auth

--- a/sdk/nodejs/package.json
+++ b/sdk/nodejs/package.json
@@ -5,7 +5,7 @@
         "kafka",
         "kafkaconnect",
         "connect",
-        "catergory/data"
+        "category/cloud"
     ],
     "scripts": {
         "build": "tsc"
