--- a/examples/yaml/Pulumi.yaml
+++ b/examples/yaml/Pulumi.yaml
@@ -11,6 +11,8 @@ resources:
     type: pulumi:providers:kafkaconnect
     properties:
       url: "http://localhost:8083" # Replace with your actual Kafka Connect URL
+      user: test
+      password: pass
 
   mirror-heartbeat-connector-yxdw:
     type: kafkaconnect:connector:Connector
