--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -134,8 +134,8 @@ jobs:
         - 1.21.x
         language:
         - nodejs
-        - python
-        - dotnet
+        # - python
+        # - dotnet
         - go
         nodeversion:
         - 18.x
