--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -133,7 +133,7 @@ jobs:
         goversion:
         - 1.21.x
         language:
-        - nodejs
+        # - nodejs
         # - python
         # - dotnet
         - go
