--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -95,6 +95,12 @@ jobs:
       uses: actions/setup-python@82c7e631bb3cdc910f68e0081d67478d79c6982d # tag=v5.1.0
       with:
         python-version: ${{matrix.pythonversion}}
+    - name: Debug Working Directory and Bin Directory
+      run: |
+        echo "Listing the working directory:"
+        ls -l
+        echo "Listing the bin directory:"
+        ls -l bin/
     - name: Build SDK
       run: make ${{ matrix.language }}_sdk
     - name: Check worktree clean
