--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -95,6 +95,12 @@ jobs:
       uses: actions/setup-python@82c7e631bb3cdc910f68e0081d67478d79c6982d # tag=v5.1.0
       with:
         python-version: ${{matrix.pythonversion}}
+    - name: Build Provider
+      run: |
+        echo "Running make provider..."
+        make provider
+        echo "Checking bin directory..."
+        ls -l bin/
     - name: Debug Working Directory and Bin Directory
       run: |
         echo "Listing the working directory:"
