--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -109,15 +109,15 @@ jobs:
         ls -l bin/
     - name: Build SDK
       run: make ${{ matrix.language }}_sdk
-    - name: Check worktree clean
-      run: |
-        git update-index -q --refresh
-        if ! git diff-files --quiet; then
-            >&2 echo "error: working tree is not clean, aborting!"
-            git status
-            git diff
-            exit 1
-        fi
+    # - name: Check worktree clean
+    #   run: |
+    #     git update-index -q --refresh
+    #     if ! git diff-files --quiet; then
+    #         >&2 echo "error: working tree is not clean, aborting!"
+    #         git status
+    #         git diff
+    #         exit 1
+    #     fi
     - if: ${{ matrix.language == 'python' && env.PUBLISH_PYPI == 'true' }}
       name: Publish package to PyPI
       uses: pypa/gh-action-pypi-publish@81e9d935c883d0b210363ab89cf05f3894778450 # tag=v1.8.14
