--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,7 @@ on:
       - "!v*.*.*-**"
 permissions:
   contents: write
+  id-token: write
 env:
   PROVIDER: "kafka-connect"
   # THIS GITHUB_TOKEN IS A REQUIREMENT TO BE ABLE TO WRITE TO GH RELEASES
