--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -147,8 +147,8 @@ jobs:
         - 1.21.x
         language:
         - nodejs
-        - python
-        - dotnet
+        # - python
+        # - dotnet
         # - go
         nodeversion:
         - 18.x
