--- a/sdk/dotnet/Pulumi.Kafkaconnect.csproj
+++ b/sdk/dotnet/Pulumi.Kafkaconnect.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Authors>azaurus1</Authors>
-    <Company>azaurus1</Company>
+    <Authors>Pulumi Corp.</Authors>
+    <Company>Pulumi Corp.</Company>
     <Description>A Pulumi native provider for Kafka Connect</Description>
-    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <PackageLicenseExpression></PackageLicenseExpression>
     <PackageProjectUrl></PackageProjectUrl>
-    <RepositoryUrl>https://github.com/azaurus1/pulumi-kafka-connect</RepositoryUrl>
+    <RepositoryUrl></RepositoryUrl>
     <PackageIcon>logo.png</PackageIcon>
 
     <TargetFramework>net6.0</TargetFramework>
